--- a/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
@@ -934,6 +934,219 @@
     {
       "cell_type": "code",
       "source": [
+        "print(calculate_time_difference_with_day('12:30:15,Wednesday - 13:41:07,Thursday'))\n",
+        "print(calculate_time_difference_with_day('12:53:15,Monday - 00:59:25,Tuesday'))\n",
+        "print(calculate_time_difference_with_day('16:06:09,Sunday - 11:11:11,Tuesday'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KEI6UC9dexLO",
+        "outputId": "352ac999-b58a-4504-8299-0272d1a69a8b"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "90652\n",
+            "43570\n",
+            "155102\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: เขียน function จากเวลาที่ใส่มา                                                                                                                                                                                                                            12:30:15 ,Wednesday- 13:41:07,Thursday\n",
+        "#  12:53:15,Monday - 00:59:25,Tuesday\n",
+        "# # 16:06:09 ,Sunday- 11:11:11,Tuesday     มีการใช้ ค่า default ของ input โดยถ้าวันที่กรอกเป็นวันเดียวกันให้ไม่ต้องกรอกเลยหรือกรอกแค่ตัวเดียว\n",
+        "\n",
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "def calculate_time_difference_with_day_and_default(time_str):\n",
+        "    \"\"\"\n",
+        "    Calculates the time difference in seconds between two time strings,\n",
+        "    considering the day of the week, with default day handling.\n",
+        "\n",
+        "    Args:\n",
+        "        time_str: A string in the format 'hh1:mm1:ss1 ,Day1- hh2:mm2:ss2,Day2'\n",
+        "                  or 'hh1:mm1:ss1 ,Day- hh2:mm2:ss2' or 'hh1:mm1:ss1-hh2:mm2:ss2,Day'.\n",
+        "                  If only one day is provided, it's assumed for both times.\n",
+        "                  If no day is provided, the difference within the same day is calculated.\n",
+        "\n",
+        "    Returns:\n",
+        "        The time difference in seconds as an integer.\n",
+        "    \"\"\"\n",
+        "    parts = time_str.split('-')\n",
+        "    time1_part = parts[0].strip()\n",
+        "    time2_part = parts[1].strip()\n",
+        "\n",
+        "    # Strip comments from parts\n",
+        "    if '#' in time1_part:\n",
+        "      time1_part = time1_part.split('#')[0].strip()\n",
+        "    if '#' in time2_part:\n",
+        "      time2_part = time2_part.split('#')[0].strip()\n",
+        "\n",
+        "    # Extract time and day for the first part\n",
+        "    if ',' in time1_part:\n",
+        "        time1_str, day1_str = [p.strip() for p in time1_part.split(',')]\n",
+        "    else:\n",
+        "        time1_str = time1_part\n",
+        "        day1_str = None\n",
+        "\n",
+        "    # Extract time and day for the second part\n",
+        "    if ',' in time2_part:\n",
+        "        time2_str, day2_str = [p.strip() for p in time2_part.split(',')]\n",
+        "    else:\n",
+        "        time2_str = time2_part\n",
+        "        day2_str = None\n",
+        "\n",
+        "    # Handle default day cases\n",
+        "    if day1_str is None and day2_str is not None:\n",
+        "        day1_str = day2_str\n",
+        "    elif day1_str is not None and day2_str is None:\n",
+        "        day2_str = day1_str\n",
+        "    elif day1_str is None and day2_str is None:\n",
+        "        # Assume same day if no day is provided\n",
+        "        day1_str = day2_str = 'Monday' # Use a placeholder day for calculation\n",
+        "\n",
+        "\n",
+        "    # Map day names to numbers (Monday=0, Sunday=6)\n",
+        "    day_mapping = {\n",
+        "        'Monday': 0, 'Tuesday': 1, 'Wednesday': 2, 'Thursday': 3,\n",
+        "        'Friday': 4, 'Saturday': 5, 'Sunday': 6\n",
+        "    }\n",
+        "\n",
+        "    # Create datetime objects with a common base date (e.g., Monday)\n",
+        "    base_date = datetime(2023, 10, 23) # A Monday\n",
+        "\n",
+        "    try:\n",
+        "        datetime1 = datetime.combine(base_date + timedelta(days=day_mapping.get(day1_str, 0)), datetime.strptime(time1_str, '%H:%M:%S').time())\n",
+        "        datetime2 = datetime.combine(base_date + timedelta(days=day_mapping.get(day2_str, 0)), datetime.strptime(time2_str, '%H:%M:%S').time())\n",
+        "    except ValueError as e:\n",
+        "        return f\"Error parsing time or day: {e}\"\n",
+        "\n",
+        "\n",
+        "    # Calculate total time difference in seconds, handling cases where datetime2 is before datetime1\n",
+        "    time_difference = datetime2 - datetime1\n",
+        "    if time_difference.total_seconds() < 0:\n",
+        "        time_difference += timedelta(days=7) # Add a week if the difference is negative (spans across midnight/week)\n",
+        "\n",
+        "\n",
+        "    return int(time_difference.total_seconds())\n",
+        "\n",
+        "\n",
+        "# Example usage with the provided data and default cases:\n",
+        "data = \"\"\"\n",
+        "12:30:15 ,Wednesday- 13:41:07,Thursday\n",
+        "12:53:15,Monday - 00:59:25,Tuesday\n",
+        "16:06:09 ,Sunday- 11:11:11,Tuesday\n",
+        "08:00:00,Monday - 09:00:00 # Default: Monday to Monday\n",
+        "10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday\n",
+        "14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)\n",
+        "\"\"\"\n",
+        "\n",
+        "entries = data.strip().split('\\n')\n",
+        "\n",
+        "for entry in entries:\n",
+        "  time_diff = calculate_time_difference_with_day_and_default(entry)\n",
+        "  print(f\"Time difference for '{entry.strip()}': {time_diff} seconds\")\n",
+        "\n",
+        "# Additional examples with default cases\n",
+        "print(f\"Time difference for '08:00:00,Monday - 09:00:00': {calculate_time_difference_with_day_and_default('08:00:00,Monday - 09:00:00')} seconds\")\n",
+        "print(f\"Time difference for '10:00:00 - 11:00:00,Tuesday': {calculate_time_difference_with_day_and_default('10:00:00 - 11:00:00,Tuesday')} seconds\")\n",
+        "print(f\"Time difference for '14:00:00,Friday - 13:00:00': {calculate_time_difference_with_day_and_default('14:00:00,Friday - 13:00:00')} seconds\")\n",
+        "print(f\"Time difference for '10:00:00 - 10:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 10:00:00')} seconds\") # Same time, same day\n",
+        "print(f\"Time difference for '10:00:00 - 09:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 09:00:00')} seconds\") # Time on next day, same day default"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XFyrGMlqfxmq",
+        "outputId": "3d3ead95-f336-4cc3-de38-3898c9a696b1"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Time difference for '12:30:15 ,Wednesday- 13:41:07,Thursday': 90652 seconds\n",
+            "Time difference for '12:53:15,Monday - 00:59:25,Tuesday': 43570 seconds\n",
+            "Time difference for '16:06:09 ,Sunday- 11:11:11,Tuesday': 155102 seconds\n",
+            "Time difference for '08:00:00,Monday - 09:00:00 # Default: Monday to Monday': 3600 seconds\n",
+            "Time difference for '10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday': 3600 seconds\n",
+            "Time difference for '14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)': 601200 seconds\n",
+            "Time difference for '08:00:00,Monday - 09:00:00': 3600 seconds\n",
+            "Time difference for '10:00:00 - 11:00:00,Tuesday': 3600 seconds\n",
+            "Time difference for '14:00:00,Friday - 13:00:00': 601200 seconds\n",
+            "Time difference for '10:00:00 - 10:00:00': 0 seconds\n",
+            "Time difference for '10:00:00 - 09:00:00': 601200 seconds\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = \"\"\"\n",
+        "12:30:15 ,Wednesday- 13:41:07,Thursday\n",
+        "12:53:15,Monday - 00:59:25,Tuesday\n",
+        "16:06:09 ,Sunday- 11:11:11,Tuesday\n",
+        "08:00:00,Monday - 09:00:00 # Default: Monday to Monday\n",
+        "10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday\n",
+        "14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)\n",
+        "\"\"\"\n",
+        "\n",
+        "entries = data.strip().split('\\n')\n",
+        "\n",
+        "for entry in entries:\n",
+        "  time_diff = calculate_time_difference_with_day_and_default(entry)\n",
+        "  print(f\"Time difference for '{entry.strip()}': {time_diff} seconds\")\n",
+        "\n",
+        "# Additional examples with default cases\n",
+        "print(f\"Time difference for '08:00:00,Monday - 09:00:00': {calculate_time_difference_with_day_and_default('08:00:00,Monday - 09:00:00')} seconds\")\n",
+        "print(f\"Time difference for '10:00:00 - 11:00:00,Tuesday': {calculate_time_difference_with_day_and_default('10:00:00 - 11:00:00,Tuesday')} seconds\")\n",
+        "print(f\"Time difference for '14:00:00,Friday - 13:00:00': {calculate_time_difference_with_day_and_default('14:00:00,Friday - 13:00:00')} seconds\")\n",
+        "print(f\"Time difference for '10:00:00 - 10:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 10:00:00')} seconds\") # Same time, same day\n",
+        "print(f\"Time difference for '10:00:00 - 09:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 09:00:00')} seconds\") # Time on next day, same day default"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CkPG0OxOiFQ4",
+        "outputId": "94195d34-42c1-403e-b3ba-a390174d02fe"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Time difference for '12:30:15 ,Wednesday- 13:41:07,Thursday': 90652 seconds\n",
+            "Time difference for '12:53:15,Monday - 00:59:25,Tuesday': 43570 seconds\n",
+            "Time difference for '16:06:09 ,Sunday- 11:11:11,Tuesday': 155102 seconds\n",
+            "Time difference for '08:00:00,Monday - 09:00:00 # Default: Monday to Monday': 3600 seconds\n",
+            "Time difference for '10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday': 3600 seconds\n",
+            "Time difference for '14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)': 601200 seconds\n",
+            "Time difference for '08:00:00,Monday - 09:00:00': 3600 seconds\n",
+            "Time difference for '10:00:00 - 11:00:00,Tuesday': 3600 seconds\n",
+            "Time difference for '14:00:00,Friday - 13:00:00': 601200 seconds\n",
+            "Time difference for '10:00:00 - 10:00:00': 0 seconds\n",
+            "Time difference for '10:00:00 - 09:00:00': 601200 seconds\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def cal_dif_secs(timeinput):\n",
         "    timelist = timeinput.split('-')\n",
         "    time1 = timelist[0].split(':')\n",
