--- a/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
@@ -1094,59 +1094,6 @@
     {
       "cell_type": "code",
       "source": [
-        "data = \"\"\"\n",
-        "12:30:15 ,Wednesday- 13:41:07,Thursday\n",
-        "12:53:15,Monday - 00:59:25,Tuesday\n",
-        "16:06:09 ,Sunday- 11:11:11,Tuesday\n",
-        "08:00:00,Monday - 09:00:00 # Default: Monday to Monday\n",
-        "10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday\n",
-        "14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)\n",
-        "\"\"\"\n",
-        "\n",
-        "entries = data.strip().split('\\n')\n",
-        "\n",
-        "for entry in entries:\n",
-        "  time_diff = calculate_time_difference_with_day_and_default(entry)\n",
-        "  print(f\"Time difference for '{entry.strip()}': {time_diff} seconds\")\n",
-        "\n",
-        "# Additional examples with default cases\n",
-        "print(f\"Time difference for '08:00:00,Monday - 09:00:00': {calculate_time_difference_with_day_and_default('08:00:00,Monday - 09:00:00')} seconds\")\n",
-        "print(f\"Time difference for '10:00:00 - 11:00:00,Tuesday': {calculate_time_difference_with_day_and_default('10:00:00 - 11:00:00,Tuesday')} seconds\")\n",
-        "print(f\"Time difference for '14:00:00,Friday - 13:00:00': {calculate_time_difference_with_day_and_default('14:00:00,Friday - 13:00:00')} seconds\")\n",
-        "print(f\"Time difference for '10:00:00 - 10:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 10:00:00')} seconds\") # Same time, same day\n",
-        "print(f\"Time difference for '10:00:00 - 09:00:00': {calculate_time_difference_with_day_and_default('10:00:00 - 09:00:00')} seconds\") # Time on next day, same day default"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CkPG0OxOiFQ4",
-        "outputId": "94195d34-42c1-403e-b3ba-a390174d02fe"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Time difference for '12:30:15 ,Wednesday- 13:41:07,Thursday': 90652 seconds\n",
-            "Time difference for '12:53:15,Monday - 00:59:25,Tuesday': 43570 seconds\n",
-            "Time difference for '16:06:09 ,Sunday- 11:11:11,Tuesday': 155102 seconds\n",
-            "Time difference for '08:00:00,Monday - 09:00:00 # Default: Monday to Monday': 3600 seconds\n",
-            "Time difference for '10:00:00 - 11:00:00,Tuesday # Default: Tuesday to Tuesday': 3600 seconds\n",
-            "Time difference for '14:00:00,Friday - 13:00:00 # Default: Friday to Friday (next day)': 601200 seconds\n",
-            "Time difference for '08:00:00,Monday - 09:00:00': 3600 seconds\n",
-            "Time difference for '10:00:00 - 11:00:00,Tuesday': 3600 seconds\n",
-            "Time difference for '14:00:00,Friday - 13:00:00': 601200 seconds\n",
-            "Time difference for '10:00:00 - 10:00:00': 0 seconds\n",
-            "Time difference for '10:00:00 - 09:00:00': 601200 seconds\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def cal_dif_secs(timeinput):\n",
         "    timelist = timeinput.split('-')\n",
         "    time1 = timelist[0].split(':')\n",
@@ -1159,7 +1106,7 @@
       "metadata": {
         "id": "Y_cPWPKzewFM"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1172,9 +1119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1lO3BaYJfUuF",
-        "outputId": "e85344df-baad-4dd5-9955-684fd865cdfc"
+        "outputId": "aa87d9f1-f698-415e-c70d-39d5406e33a5"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1184,7 +1131,66 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#inspect existing function\n",
+        "\n",
+        "- https://www.w3schools.com/python/ref_func_print.asp\n",
+        "\n",
+        "- https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier"
+      ],
+      "metadata": {
+        "id": "d5GpTonJkC8A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abc','def')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GqWbB49XkGHH",
+        "outputId": "e0ecd610-ffdf-4e6a-855e-a7e46ab12541"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abc def\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abc','def',sep='+')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pCaiSvMYkyJu",
+        "outputId": "1c4206f7-bdf5-44bb-9edd-3d535e27c82f"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abc+def\n"
+          ]
         }
       ]
     },
