--- a/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
@@ -1327,7 +1327,7 @@
         "for i in 'Thanapong':\n",
         "    print(f'{i} -> / ' )"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,7 +1359,7 @@
         "for i in 'Thanapong':\n",
         "    print(f'{i} -> / ' ,end = '') #สั่งให้ print แบบ ไม่เว้นบรรทัด"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1392,7 +1392,7 @@
         "range5_output = range(5)\n",
         "print(list(range5_output))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,7 +1416,7 @@
         "for i in range(100):\n",
         "    print('งง',end=' ')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1439,7 +1439,7 @@
       "source": [
         "list(range(1,11)) #เริ่มต้นเป็นวงทึบ จบเป็นวงกลมโปร่ง เหมือน list slicing"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1465,7 +1465,7 @@
       "source": [
         "list(range(-3,20,4))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1503,7 +1503,7 @@
         "id": "h3LHqBQ5AfHb",
         "outputId": "abb93201-0f02-4965-c953-291e3d16b860"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1535,7 +1535,7 @@
         "id": "omplYidnBKV7",
         "outputId": "1c2ba132-16c1-4d8d-8aed-2089d7d7e6cf"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1580,7 +1580,7 @@
         "        print('  ', name1,' x ',name2,' = ',name1*name2)\n",
         "    print('the inner loop is end')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,7 +1663,7 @@
         "id": "puiDkDrPCcY9",
         "outputId": "c5a205f6-24f1-4ce5-a489-371694ecb96e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1698,7 +1698,7 @@
         "    for friend in friendS:\n",
         "        print(f'{I} {feeling} {friend}')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1709,7 +1709,7 @@
       "source": [
         "list_friends = ['วิว','คุณหนูเบียร์','พ่อใหญ่เฟิร์ส','อ้ายสีหนุ่ม','จ่าหนึ่ง','บักโส']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1724,7 +1724,7 @@
       "source": [
         "print_feelings('มิ้น',list_friends)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1752,7 +1752,7 @@
       "source": [
         "print_feelings('มิ้น',list_friends,feeling='ซัง')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1902,7 +1902,7 @@
         "name_grade = {'พันทิพา' : 'B','ศุภนิตา' : 'C','ปนัดดา' : 'A','ทรงกลด' : 'F'}\n",
         "name_grade"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1929,7 +1929,7 @@
       "source": [
         "name_grade['ปนัดดา']"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1958,7 +1958,7 @@
         "id": "0tXZc6kgYPgm",
         "outputId": "636111c4-e143-431b-b9c3-aac69f3d7fd1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1984,7 +1984,7 @@
         "id": "zEqstk33YRxp",
         "outputId": "d40386b7-7ee6-4f96-bc59-9c9208b33b33"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2012,7 +2012,7 @@
         "for i in name_grade.keys():\n",
         "    print(i)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,7 +2095,7 @@
         "id": "BqYhLFc5aYa2",
         "outputId": "e3d5dd03-f1d0-4114-ee4c-c55e144f4ba7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2153,64 +2153,255 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: สร้าง function คำนวณ จำนวน วินาที ที่แตกต่างระหว่าง input hh:mm:ss , day of the week 2 ค่า\n",
+        "# prompt: สร้าง function คำนวณ จำนวน วินาที ที่แตกต่างระหว่าง input hh:mm:ss, day of the week 2 ค่า\n",
         "\n",
-        "def calculate_time_difference_with_day(time_str):\n",
-        "    \"\"\"\n",
-        "    Calculates the time difference in seconds between two time strings,\n",
-        "    considering the day of the week.\n",
+        "from datetime import datetime, timedelta\n",
         "\n",
-        "    Args:\n",
-        "        time_str: A string in the format 'hh1:mm1:ss1 ,Day1- hh2:mm2:ss2,Day2'.\n",
+        "def time_difference_in_seconds(time_str1, weekday1, time_str2, weekday2):\n",
+        "  \"\"\"\n",
+        "  คำนวณความแตกต่างของเวลาในหน่วยวินาทีระหว่างสองเวลาและวันในสัปดาห์\n",
         "\n",
-        "    Returns:\n",
-        "        The time difference in seconds as an integer.\n",
-        "    \"\"\"\n",
-        "    time1_day_str, time2_day_str = time_str.split(' - ')\n",
-        "    time1_str, day1_str = time1_day_str.split(',')\n",
-        "    time2_str, day2_str = time2_day_str.split(',')\n",
+        "  Args:\n",
+        "    time_str1: สตริงเวลาในรูปแบบ 'hh:mm:ss' สำหรับเวลาแรก\n",
+        "    weekday1: วันในสัปดาห์สำหรับเวลาแรก (0=วันจันทร์, 6=วันอาทิตย์)\n",
+        "    time_str2: สตริงเวลาในรูปแบบ 'hh:mm:ss' สำหรับเวลาที่สอง\n",
+        "    weekday2: วันในสัปดาห์สำหรับเวลาที่สอง (0=วันจันทร์, 6=วันอาทิตย์)\n",
         "\n",
-        "    # Map day names to numbers (Monday=0, Sunday=6)\n",
-        "    day_mapping = {\n",
-        "        'Monday': 0, 'Tuesday': 1, 'Wednesday': 2, 'Thursday': 3,\n",
-        "        'Friday': 4, 'Saturday': 5, 'Sunday': 6\n",
-        "    }\n",
+        "  Returns:\n",
+        "    จำนวนวินาทีที่แตกต่างกัน\n",
+        "  \"\"\"\n",
+        "  day = {'Monday':0, 'Tuesday':1, 'Wednesday':2, 'Thursday':3, 'Friday':4, 'Saturday':5, 'Sunday':6}\n",
+        "  # Mapping weekdays to a common reference point (e.g., seconds from the beginning of the week)\n",
+        "  seconds_per_day = 24 * 3600\n",
         "\n",
-        "    # Create datetime objects with a common base date (e.g., Monday)\n",
-        "    base_date = datetime(2023, 10, 23) # A Monday\n",
+        "  def parse_time_and_weekday(time_str, weekday):\n",
+        "    h, m, s = map(int, time_str.split(':'))\n",
+        "    # Calculate total seconds from the beginning of the week\n",
+        "    total_seconds = weekday * seconds_per_day + h * 3600 + m * 60 + s\n",
+        "    return total_seconds\n",
         "\n",
-        "    time1 = datetime.strptime(time1_str.strip(), '%H:%M:%S')\n",
-        "    time2 = datetime.strptime(time2_str.strip(), '%H:%M:%S')\n",
+        "  total_seconds1 = parse_time_and_weekday(time_str1, day[weekday1])\n",
+        "  total_seconds2 = parse_time_and_weekday(time_str2, day[weekday2])\n",
         "\n",
-        "    # Calculate days difference\n",
-        "    day1_num = day_mapping[day1_str.strip()]\n",
-        "    day2_num = day_mapping[day2_str.strip()]\n",
-        "    days_difference = day2_num - day1_num\n",
+        "  return abs(total_seconds1 - total_seconds2)\n",
         "\n",
-        "    # If time2 is on the next week, add 7 days\n",
-        "    if days_difference < 0:\n",
-        "        days_difference += 7\n",
+        "# Example usage:\n",
+        "time1 = \"10:00:00\"\n",
+        "day1 = 'Tuesday'\n",
+        "time2 = \"11:30:00\"\n",
+        "day2 = 'Thursday'\n",
         "\n",
-        "    # Calculate total time difference in seconds\n",
-        "    time_difference_seconds = (time2 - time1).total_seconds() + (days_difference * 24 * 3600)\n",
+        "diff_seconds = time_difference_in_seconds(time1, day1, time2, day2)\n",
+        "print(f\"ความแตกต่างของเวลาระหว่าง {time1} วัน {day1} และ {time2} วัน {day2} คือ {diff_seconds} วินาที\")\n",
         "\n",
-        "    return int(time_difference_seconds)\n",
-        "\n"
+        "time3 = \"23:00:00\"\n",
+        "day3 = 'Sunday'\n",
+        "time4 = \"01:00:00\"\n",
+        "day4 = 'Monday'\n",
+        "\n",
+        "diff_seconds2 = time_difference_in_seconds(time3, day3, time4, day4)\n",
+        "print(f\"ความแตกต่างของเวลาระหว่าง {time3} วัน {day3} และ {time4} วัน {day4} คือ {diff_seconds2} วินาที\")\n",
+        "#ความแตกต่างของเวลาระหว่าง 10:00:00 วัน Tuesday และ 11:30:00 วัน Thursday คือ 178200 วินาที\n",
+        "#ความแตกต่างของเวลาระหว่าง 23:00:00 วัน Sunday และ 01:00:00 วัน Monday คือ 597600 วินาที"
       ],
       "metadata": {
-        "id": "7hBYHdMdQQ8Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gRhRXSv7KKI6",
+        "outputId": "7f5d09d8-dcad-49bd-8754-84c4bd1ecfc6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ความแตกต่างของเวลาระหว่าง 10:00:00 วัน Tuesday และ 11:30:00 วัน Thursday คือ 178200 วินาที\n",
+            "ความแตกต่างของเวลาระหว่าง 23:00:00 วัน Sunday และ 01:00:00 วัน Monday คือ 597600 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: สร้าง function คำนวณ จำนวน วินาที ที่แตกต่างระหว่าง input hh:mm:ss, day of the week 2 ค่า\n",
+        "\n",
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "def time_difference_in_seconds(time_str1, weekday1, time_str2, weekday2=None):\n",
+        "  \"\"\"\n",
+        "  คำนวณความแตกต่างของเวลาในหน่วยวินาทีระหว่างสองเวลาและวันในสัปดาห์\n",
+        "\n",
+        "  Args:\n",
+        "    time_str1: สตริงเวลาในรูปแบบ 'hh:mm:ss' สำหรับเวลาแรก\n",
+        "    weekday1: วันในสัปดาห์สำหรับเวลาแรก (0=วันจันทร์, 6=วันอาทิตย์)\n",
+        "    time_str2: สตริงเวลาในรูปแบบ 'hh:mm:ss' สำหรับเวลาที่สอง\n",
+        "    weekday2: วันในสัปดาห์สำหรับเวลาที่สอง (0=วันจันทร์, 6=วันอาทิตย์)\n",
+        "\n",
+        "  Returns:\n",
+        "    จำนวนวินาทีที่แตกต่างกัน\n",
+        "  \"\"\"\n",
+        "  day = {'Monday':0, 'Tuesday':1, 'Wednesday':2, 'Thursday':3, 'Friday':4, 'Saturday':5, 'Sunday':6}\n",
+        "  # Mapping weekdays to a common reference point (e.g., seconds from the beginning of the week)\n",
+        "  seconds_per_day = 24 * 3600\n",
+        "\n",
+        "  def parse_time_and_weekday(time_str, weekday):\n",
+        "    h, m, s = map(int, time_str.split(':'))\n",
+        "    # Calculate total seconds from the beginning of the week\n",
+        "    total_seconds = weekday * seconds_per_day + h * 3600 + m * 60 + s\n",
+        "    return total_seconds\n",
+        "  if weekday2 is None:\n",
+        "    weekday2 = weekday1\n",
+        "  total_seconds1 = parse_time_and_weekday(time_str1, day[weekday1])\n",
+        "  total_seconds2 = parse_time_and_weekday(time_str2, day[weekday2])\n",
+        "\n",
+        "  return abs(total_seconds1 - total_seconds2)\n",
+        "\n",
+        "# Example usage:\n",
+        "time1 = \"10:00:00\"\n",
+        "day1 = 'Tuesday'\n",
+        "time2 = \"11:30:00\"\n",
+        "day2 = 'Thursday'\n",
+        "\n",
+        "diff_seconds = time_difference_in_seconds(time1, day1, time2, day2)\n",
+        "print(f\"ความแตกต่างของเวลาระหว่าง {time1} วัน {day1} และ {time2} วัน {day2} คือ {diff_seconds} วินาที\")\n",
+        "\n",
+        "time3 = \"18:00:00\"\n",
+        "day3 = 'Sunday'\n",
+        "time4 = \"23:45:00\"\n",
+        "\n",
+        "diff_seconds2 = time_difference_in_seconds(time3, day3, time4)\n",
+        "print(f\"ความแตกต่างของเวลาระหว่าง {time3} วัน {day3} และ {time4} คือ {diff_seconds2} วินาที\")\n",
+        "#ความแตกต่างของเวลาระหว่าง 10:00:00 วัน Tuesday และ 11:30:00 วัน Thursday คือ 178200 วินาที\n",
+        "#ความแตกต่างของเวลาระหว่าง 18:00:00 วัน Sunday และ 23:45:00 คือ 20700 วินาที"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HdFsS5vZKdI0",
+        "outputId": "897bdeea-c190-422f-f73d-78c42d31ac66"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ความแตกต่างของเวลาระหว่าง 10:00:00 วัน Tuesday และ 11:30:00 วัน Thursday คือ 178200 วินาที\n",
+            "ความแตกต่างของเวลาระหว่าง 18:00:00 วัน Sunday และ 23:45:00 คือ 20700 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#HW3 เพิ่ม loop เข้าไปใน Quiz 6 โดยวนลูป คำนวณ วินาที ในโจทย์ต่อไปนี้\n"
+        "#HW3 เพิ่ม loop เข้าไปใน Quiz 6 โดยวนลูป คำนวณ วินาที ในโจทย์ต่อไปนี้\n",
+        "[\n",
+        "    (\"10:00:00\", \"Monday\", \"11:30:00\", 5400),  # Same day, later time\n",
+        "    (\"11:30:00\", \"Monday\", \"10:00:00\", \"Monday\", 5400),  # Same day, earlier time\n",
+        "    (\"23:00:00\", \"Sunday\", \"01:00:00\", , 7200),  # Cross midnight\n",
+        "    (\"01:00:00\", \"Monday\", \"23:00:00\", \"Sunday\", 7200),  # Cross midnight (reverse)\n",
+        "    (\"10:00:00\", \"Tuesday\", \"11:30:00\", \"Thursday\", 178200), # Multiple days difference\n",
+        "    (\"11:30:00\", \"Thursday\", \"10:00:00\", \"Tuesday\", 178200), # Multiple days difference (reverse)\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Monday\", 0),      # Same time, same day\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Tuesday\", 24*3600), # Same time, next day\n",
+        "    (\"00:00:00\", \"Monday\", \"23:59:59\", , 24*3600 - 1), # Almost 24 hours later\n",
+        "    (\"23:59:59\", \"Sunday\", \"00:00:00\", \"Monday\", 1),       # One second difference across midnight\n",
+        "]"
       ],
       "metadata": {
         "id": "AfHjgOUDSjS7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "def time_difference_in_seconds_v2(time_str1, weekday1, time_str2, weekday2):\n",
+        "    \"\"\"คำนวณความแตกต่างของเวลาในหน่วยวินาทีระหว่างสองเวลาและวันในสัปดาห์ (ใช้ datetime)\"\"\"\n",
+        "    # แผนที่วันในสัปดาห์ → เลข (0 = Monday)\n",
+        "    day_map = {\n",
+        "        'Monday': 0, 'Tuesday': 1, 'Wednesday': 2,\n",
+        "        'Thursday': 3, 'Friday': 4, 'Saturday': 5, 'Sunday': 6\n",
+        "    }\n",
+        "\n",
+        "    def build_datetime(time_str, weekday_str):\n",
+        "        h, m, s = map(int, time_str.split(\":\"))\n",
+        "        weekday = day_map[weekday_str]\n",
+        "        base_date = datetime(2001, 1, 1)  # เริ่มที่วันจันทร์\n",
+        "        date = base_date + timedelta(days=weekday)\n",
+        "        return date.replace(hour=h, minute=m, second=s)\n",
+        "\n",
+        "    # สร้าง datetime สำหรับทั้งสองเวลา\n",
+        "    dt1 = build_datetime(time_str1, weekday1)\n",
+        "    dt2 = build_datetime(time_str2, weekday2)\n",
+        "\n",
+        "    # หาความต่างระหว่างเวลา\n",
+        "    diff_seconds = abs((dt2 - dt1).total_seconds())\n",
+        "    full_week = 7 * 24 * 3600  # วินาทีใน 1 สัปดาห์\n",
+        "\n",
+        "    return int(min(diff_seconds, full_week - diff_seconds))\n"
+      ],
+      "metadata": {
+        "id": "G_WgtjBDQSIF"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_cases = [\n",
+        "    (\"10:00:00\", \"Monday\", \"11:30:00\", \"Monday\", 5400),\n",
+        "    (\"11:30:00\", \"Monday\", \"10:00:00\", \"Monday\", 5400),\n",
+        "    (\"23:00:00\", \"Sunday\", \"01:00:00\", \"Monday\", 7200),\n",
+        "    (\"01:00:00\", \"Monday\", \"23:00:00\", \"Sunday\", 7200),\n",
+        "    (\"10:00:00\", \"Tuesday\", \"11:30:00\", \"Thursday\", 178200),\n",
+        "    (\"11:30:00\", \"Thursday\", \"10:00:00\", \"Tuesday\", 178200),\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Monday\", 0),\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Tuesday\", 86400),\n",
+        "    (\"00:00:00\", \"Monday\", \"23:59:59\", \"Monday\", 86399),\n",
+        "    (\"23:59:59\", \"Sunday\", \"00:00:00\", \"Monday\", 1),\n",
+        "]\n",
+        "\n",
+        "print(\"📦 ผลลัพธ์จากการใช้วนลูป:\")\n",
+        "for i, (t1, d1, t2, d2, expected) in enumerate(test_cases, start=1):\n",
+        "    result = time_difference_in_seconds_v2(t1, d1, t2, d2)\n",
+        "    status = \"✅ ถูกต้อง\" if result == expected else f\"❌ ผิด (ได้ {result})\"\n",
+        "    print(f\"🌟กรณี {i}: {t1} {d1} → {t2} {d2} | คาดว่า {expected} | {status}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TWRpGhjDQZ6N",
+        "outputId": "42b31a12-fc2e-418e-c43f-d12bac4559c4"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📦 ผลลัพธ์จากการใช้วนลูป:\n",
+            "🌟กรณี 1: 10:00:00 Monday → 11:30:00 Monday | คาดว่า 5400 | ✅ ถูกต้อง\n",
+            "🌟กรณี 2: 11:30:00 Monday → 10:00:00 Monday | คาดว่า 5400 | ✅ ถูกต้อง\n",
+            "🌟กรณี 3: 23:00:00 Sunday → 01:00:00 Monday | คาดว่า 7200 | ✅ ถูกต้อง\n",
+            "🌟กรณี 4: 01:00:00 Monday → 23:00:00 Sunday | คาดว่า 7200 | ✅ ถูกต้อง\n",
+            "🌟กรณี 5: 10:00:00 Tuesday → 11:30:00 Thursday | คาดว่า 178200 | ✅ ถูกต้อง\n",
+            "🌟กรณี 6: 11:30:00 Thursday → 10:00:00 Tuesday | คาดว่า 178200 | ✅ ถูกต้อง\n",
+            "🌟กรณี 7: 12:00:00 Monday → 12:00:00 Monday | คาดว่า 0 | ✅ ถูกต้อง\n",
+            "🌟กรณี 8: 12:00:00 Monday → 12:00:00 Tuesday | คาดว่า 86400 | ✅ ถูกต้อง\n",
+            "🌟กรณี 9: 00:00:00 Monday → 23:59:59 Monday | คาดว่า 86399 | ✅ ถูกต้อง\n",
+            "🌟กรณี 10: 23:59:59 Sunday → 00:00:00 Monday | คาดว่า 1 | ✅ ถูกต้อง\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2500,15 +2691,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Bg3vVE3GbPqn"
-      },
-      "source": [
-        "# Finish"
-      ]
     }
   ]
 }
