--- a/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025_แก้ไข.ipynb
@@ -2380,7 +2380,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TWRpGhjDQZ6N",
-        "outputId": "42b31a12-fc2e-418e-c43f-d12bac4559c4"
+        "outputId": "f6b7962c-c775-4458-9dfe-21e436e2346c"
       },
       "execution_count": 2,
       "outputs": [
@@ -2479,7 +2479,7 @@
       "metadata": {
         "id": "9NIOIupSd_Zn"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2497,7 +2497,7 @@
       "metadata": {
         "id": "CYcYQJ45d8Wx"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2517,9 +2517,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sv-1il2_dmvv",
-        "outputId": "50f45721-6ca1-4fc0-f786-ec748affb410"
+        "outputId": "a75c712f-ddc9-4e1e-cc6a-bcbf820a6793"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -2544,44 +2544,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# HW3 เพิ่ม ฟังก์ชั่นแปลงวินาทีกลับมาเป็น ชั่วโมง นาที วินาที โดยไม่ใช่ฟังก์ชั่นช่วยเหลืออื่นๆของ python (~~import~~) ถ้าส่วนของ ชั่วโมง นาที วินาที เป็นศูนย์ ไม่ต้องแสดง"
-      ],
-      "metadata": {
-        "id": "JMvgwO7tgxSZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sSySEFHNbPql"
-      },
-      "source": [
-        "# HW 4\n",
-        "#### เขียน function ตัดเกรด โดยที่ input เป็นคะแนน(0-100) , output เป็นเกรด (F-A)\n",
-        "#### วนลูปตัดเกรด input = [1,50,65,90,101,-5,49]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c3TDhZHzbPqm"
-      },
-      "source": [
-        "##### กำหนด\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ  0  แต่น้อยกว่า 50 จะได้เกรด F\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 50 แต่น้อยกว่า 55 จะได้เกรด D\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 55 แต่น้อยกว่า 60 จะได้เกรด D+\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 60 แต่น้อยกว่า 65 จะได้เกรด C\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 65 แต่น้อยกว่า 70 จะได้เกรด C+\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 70 แต่น้อยกว่า 75 จะได้เกรด B\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 75 แต่น้อยกว่า 80 จะได้เกรด B+\n",
-        "      ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 80  จะได้เกรด A\n",
-        "      แต่ว่าค่าคะแนนจะต้องไม่ต่ำกว่า 0 และมากกว่า 100 ไม่งั้นจะเกิด error"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## ```&```, ```|```, ```in```, ```is```   :  Operator อื่นๆ"
       ],
       "metadata": {
@@ -2596,12 +2558,12 @@
       ],
       "metadata": {
         "id": "ES5d1z0ti306",
-        "outputId": "4bc178b2-a5d8-4476-e02c-c87ddd5b91ce",
+        "outputId": "9d6949fa-0521-4c6a-d162-efc36e9222f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2615,26 +2577,65 @@
     {
       "cell_type": "code",
       "source": [
-        "if 'T' in 'Thanapong':\n",
-        "    print('T in Thanapong')"
+        "b = 7 in range(7)\n",
+        "print(b)"
       ],
       "metadata": {
-        "id": "3COnyOTKipAc",
-        "outputId": "d50e2919-9cbc-41fb-d20f-6e5a371ebba1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vbyC7OSzSHmk",
+        "outputId": "3ba8e723-a7fc-466a-f430-f4f3609e6338"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T in Thanapong\n"
+            "False\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a & b"
+      ],
+      "metadata": {
+        "id": "3COnyOTKipAc",
+        "outputId": "f73f103b-eeaf-44d9-836e-c769693fd1da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'a' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-10-1730153353.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a /b"
+      ],
+      "metadata": {
+        "id": "cn5nbRpVSxbG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2645,7 +2646,7 @@
       "metadata": {
         "id": "01N3TOG9k3ti"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -2656,7 +2657,7 @@
       "metadata": {
         "id": "drWbuBwNldOL"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2667,12 +2668,12 @@
       ],
       "metadata": {
         "id": "pOj0pkEEkbuW",
-        "outputId": "29d5bf18-d242-40f3-a542-26c39aa2fcca",
+        "outputId": "fea1c456-9b2d-4bf2-a5cd-13834ff36efb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2684,13 +2685,117 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## break คือ ออกจาก loop##"
+      ],
       "metadata": {
-        "id": "y1ET-H8ylyxP"
+        "id": "UK1Wwp6STyDd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "# สร้าง function ตรวจสอบว่าใน list มีเลขคี่ หรือเปล่า\n",
+        "\n",
+        "def check_odd_in_list(input_list):\n",
+        "      for i in input_list:\n",
+        "           if i % 2 !=0:\n",
+        "             print(f'มีเลขคี่ คือ {i}')\n",
+        "             print('ไม่มีเลขคี่ คือ ')\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vrZ5VV9QTXKs",
+        "outputId": "7d713a55-1fd0-4846-e2cc-e3e1ae43c89b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "ไม่มีเลขคี่ คือ \n",
+            "มีเลขคี่ คือ 81\n",
+            "ไม่มีเลขคี่ คือ \n",
+            "มีเลขคี่ คือ 9\n",
+            "ไม่มีเลขคี่ คือ \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "# สร้าง function ตรวจสอบว่าใน list มีเลขคี่ หรือเปล่า\n",
+        "\n",
+        "def check_odd_in_list(input_list):\n",
+        "      for i in input_list:\n",
+        "           if i % 2 !=0:\n",
+        "             print(f'มีเลขคี่ คือ {i}')\n",
+        "             break\n",
+        "             print('ไม่มีเลขคี่ คือ ')\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eiJfkOLoWd13",
+        "outputId": "f59af4bc-7b2c-43cf-8462-83e882f46f07"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0,2,8,24,5,60,70,81,9,10]\n",
+        "# สร้าง function ตรวจสอบว่าใน list มีเลขคี่ หรือเปล่า\n",
+        "\n",
+        "def check_odd_in_list(input_list):\n",
+        "      for i in input_list:\n",
+        "           if i % 2 !=0:\n",
+        "             print(f'มีเลขคี่ คือ {i}')\n",
+        "             return\n",
+        "\n",
+        "             print(f'ไม่มีเลขคี่ คือ ')\n",
+        "             return input_list\n",
+        "\n",
+        "check_odd_in_list(numbers)\n",
+        "check_odd_in_list([0,2,8,24])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z6HU45T3WuV1",
+        "outputId": "5682b77f-1480-4318-f006-a769943da915"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n"
+          ]
+        }
+      ]
     }
   ]
 }
